<resources>
    <string name="app_name">Notacity</string>
    <string name="toggle_theme">Toggle Theme</string>
    <string name="new_note_button">New Note</string>
    <string name="settings">Settings</string>

    <string name="title_hint">Title</string>
    <string name="body_hint">Body</string>
    <string name="delete">Delete</string>
    <string name="dialog_delete">Delete this note?</string>
    <string name="cancel">Cancel</string>
    <string name="delete_note">Delete</string>
    <string name="camera">Take picture</string>
    <string name="note_image">note_image</string>
    <string name="photo_gallery">Photo Gallery</string>

    <!--Sharing notes-->
    <string name="share">Share</string>
    <string name="note_report">Here are my notes about %1$s from %2$s: %3$s</string>
    <string name="note_report_subject">Notacity Notes</string>
    <string name="send_report">Send notes via</string>
    <string name="no_notes">No notes</string>
    <string name="open_source_licences">Open Source Licenses</string>
    <string name="action_search">Search</string>
    <string name="choose_theme">Choose Theme</string>
    <string name="bullet_list">Bullet List</string>
    <string name="number_list">Number List</string>
    <string name="priority_note">Priority Note</string>
    <string name="filter_priority">Filter Priority</string>

    <!--Transition strings-->
    <string name="note_frag_img_expand">note_frag_img_expand</string>

</resources>
