<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:divider="?android:dividerVertical"
    android:showDividers="middle">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_delete"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/dialog_text"/>

    <!--
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/dialog_text"
        android:background="@color/black"
        android:layout_marginTop="10dp"/>
        -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:buttonBarStyle"
        android:divider="?android:dividerHorizontal"
        android:showDividers="middle">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_action"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textAllCaps="false"
            style="?android:buttonBarButtonStyle"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/delete_action"
            android:layout_weight="1"
            android:text="@string/delete_note"
            android:textAllCaps="false"
            style="?android:buttonBarButtonStyle"/>
    </LinearLayout>

</LinearLayout>