<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/title_star_layout"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/new_note_title"
                    android:imeOptions="actionDone"
                    android:layout_weight="8"
                    android:gravity="center"
                    android:inputType="textCapSentences"
                    android:textSize="25sp"
                    android:maxLines="1"
                    android:maxLength="25"
                    android:textStyle="bold"
                    android:background="@android:color/transparent"
                    android:hint="@string/title_hint"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/note_priority"
                    android:layout_weight="1"
                    android:src="@drawable/ic_action_priority"
                    android:background="@color/transparent"
                    android:contentDescription="@string/priority_note"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/separator"
                android:layout_marginTop="4dp"
                android:background="@color/black"
                android:layout_below="@+id/title_star_layout"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/new_note_body"
                android:imeOptions="actionDone"
                android:layout_below="@id/separator"
                android:padding="8dp"
                android:hint="@string/body_hint"
                android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
                android:background="@android:color/transparent"/>

        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/image_delete"
            android:background="@drawable/image_delete_style"
            android:src="@drawable/ic_action_image_delete"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/card_view"
            android:contentDescription="@string/delete"
            android:visibility="gone"/>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            app:cardElevation="8dp"
            app:cardPreventCornerOverlap="false"
            app:contentPadding="0dp"
            app:cardCornerRadius="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/image_loading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:indeterminate="true"
                android:layout_gravity="center"
                android:indeterminateDrawable="@drawable/progress_bar_drawable" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/photo"
                android:scaleType="centerCrop"
                android:contentDescription="@string/camera" />

        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/style_layout"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/bullet_button"
            android:layout_weight="1"
            android:src="@drawable/ic_action_black_bullets"
            android:background="@color/transparent"
            android:contentDescription="@string/bullet_list"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/number_button"
            android:layout_weight="1"
            android:src="@drawable/ic_action_black_numbers"
            android:background="@color/transparent"
            android:contentDescription="@string/number_list"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:visibility="invisible"/>

    </LinearLayout>

</LinearLayout>