<?xml version="1.0" encoding="utf-8"?>
<com.chauthai.swipereveallayout.SwipeRevealLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/swipe_reveal"
    app:mode="same_level"
    app:dragEdge="left">

    <!-- Your secondary layout here -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:orientation="vertical">

        <ImageButton
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:id="@+id/list_delete_button"
            android:background="@drawable/delete_button_style"
            android:src="@drawable/ic_action_delete"
            android:contentDescription="@string/delete"/>

    </RelativeLayout>

    <!-- Your main layout here -->
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:id="@+id/description_layout"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@drawable/recycler_item_ripple">

        <View
            android:id="@+id/divider_top"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:background="@color/black"
            android:alpha=".1"
            android:visibility="gone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/note_title"
            android:layout_toEndOf="@+id/recycler_card_view"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/note_date"
            android:layout_toEndOf="@+id/recycler_card_view"
            android:textSize="12sp"
            android:layout_below="@+id/note_title"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:layout_marginTop="4dp"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/note_list_priority"
            android:src="@drawable/ic_action_priority"
            android:background="@color/transparent"
            android:contentDescription="@string/priority_note"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:visibility="gone"/>

        <android.support.v7.widget.CardView
            android:id="@+id/recycler_card_view"
            android:layout_width="56dp"
            android:layout_height="56dp"
            app:cardElevation="8dp"
            app:cardPreventCornerOverlap="false"
            app:contentPadding="0dp"
            app:cardCornerRadius="28dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:visibility="invisible">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:id="@+id/note_thumbnail"
                android:scaleType="centerCrop"
                android:contentDescription="@string/note_image" />

        </android.support.v7.widget.CardView>

        <View
            android:id="@+id/divider_bottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/black"
            android:alpha=".1"
            android:visibility="gone"/>

    </RelativeLayout>
</com.chauthai.swipereveallayout.SwipeRevealLayout>